--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-.gradle
+/.gradle/
 /build/
 
 # Ignore Gradle GUI config
@@ -12,3 +12,11 @@ gradle-app.setting
 
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
+
+/.idea/
+/*/out/
+*.iml
+*.ipr
+*.iws
+
+scratch.txt
