--- a/.github/workflows/redeploy.yml
+++ b/.github/workflows/redeploy.yml
@@ -15,9 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Login to Docker Hub
-        run: |
-          export DOCKERHUB_PASSWORD=${{ secrets.DOCKER_PASS }}
-          echo $DOCKERHUB_PASSWORD | docker login -u ${{ secrets.DOCKER_USER }} --password-stdin
+        run: docker login -u ${{ secrets.DOCKER_USER }} --password-stdin ${{ secrets.DOCKER_PASS }}
       - name: Build Docker image
         run: docker build -t $REPO:latest -t $REPO:${GITHUB_SHA::8} .
       - name: Publish Docker image
